--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.startup_namer">
+    package="ch.hevs.startup_namer_group2">
    <application
-        android:label="startup_namer"
+        android:label="startup_namer_group2"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
