--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.startup_namer">
+    package="ch.hevs.students.artnext.grp2">
    <application
         android:label="startup_namer"
         android:icon="@mipmap/ic_launcher">
