--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ch.hevs.students.artnext.grp2">
    <application
-        android:label="startup_namer"
+        android:label="ArtNext"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
