--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  transparent_image: ^2.0.0
+  cached_network_image: ^3.1.0
   flutter:
     sdk: flutter
 
