--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
    <application
         android:label="ArtNext"
         android:icon="@mipmap/ic_launcher">
+
+       <!-- TODO: Add your API key here -->
+       <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyDzWWfl_zdK0yCVYkcvWzCQHenSEHeC5Wc"/>
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
