--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,13 +27,19 @@ dependencies:
     sdk: flutter
 
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  google_maps_flutter: ^2.0.1
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0-0
   change_app_package_name: ^1.0.0
   firebase_core: "^1.3.0"
   cloud_firestore: "^2.3.0"
+  datetime_picker_formfield: ^2.0.0
+  intl: ^0.17.0
+  json_annotation: ^4.0.1
+  google_maps_flutter_web: ^0.3.0+3
+  geocoding: ^2.0.0
+  geocoder: ^0.2.1
+  google_maps: ^5.2.0
 
 dev_dependencies:
   flutter_test:
