--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,6 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_database: ^7.1.2
-
-
   google_maps_flutter: ^2.0.1
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0-0
@@ -62,6 +60,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/images/login.png
+  - assets/images/placeholder.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
