--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   datetime_picker_formfield: ^2.0.0
   intl: ^0.17.0
   json_annotation: ^4.0.1
+  google_fonts: ^2.1.0
 
 dev_dependencies:
   flutter_test:
