--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   english_words: ^4.0.0-0
   change_app_package_name: ^1.0.0
   firebase_core: "^1.3.0"
+  firebase_auth: "^3.0.2"
+  provider: "^6.0.0"
   cloud_firestore: "^2.3.0"
   datetime_picker_formfield: ^2.0.0
   intl: ^0.17.0
