--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   intl: ^0.17.0
   json_annotation: ^4.0.1
   google_fonts: ^2.1.0
+  share_plus: ^2.1.4
 
 dev_dependencies:
   flutter_test:
