--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   intl: ^0.17.0                       # plugin pour l'internationalisation
   google_fonts: ^2.1.0                # utilisation des Google Fonts
   font_awesome_flutter: ^9.1.0
+  share_plus: ^2.1.4
+  firebase_dynamic_links: ^2.0.8
 
 dev_dependencies:
   flutter_test:
