--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   json_annotation: ^4.0.1
   share_plus: ^2.1.4
   firebase_dynamic_links: ^2.0.8
+  url_launcher: ^6.0.10
 
 dev_dependencies:
   flutter_test:
