Overview App display

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   mailto:                             # pour envoyer des emails
   url_launcher:                       # pour ouvrir des liens
   share_plus: ^2.1.4
+  introduction_screen: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +68,7 @@ flutter:
   assets:
   - assets/images/github.png
   - assets/images/placeholder.jpg
+  - assets/images/testonboarding.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
