--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ch.hevs.students.artnext.grp2">
+    package="ch.hevs.startup_namer_group2">
 <!--    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />-->
     <application
+
         android:label="ArtNext"
         android:icon="@mipmap/ic_launcher">
 
