--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+9
+version: 1.0.0+11
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -42,6 +42,7 @@ dependencies:
   url_launcher:                       # pour ouvrir des liens
   share_plus: ^2.1.4
   introduction_screen: ^2.1.0         # pour afficher des images au démarage
+
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +71,10 @@ flutter:
   - assets/images/placeholder.jpg
   - assets/images/testonboarding.jpg
   - assets/images/profil.png
+  - assets/images/schedule.png
+  - assets/images/listattendees.png
+  - assets/images/listevent.png
+  - assets/images/searchevent.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
