--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cached_network_image: ^3.1.0
   flutter:
     sdk: flutter
+  shared_preferences:
   firebase_database: ^7.1.2
   google_maps_flutter: ^2.0.1
   cupertino_icons: ^1.0.2
