--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,34 +15,29 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+14
+version: 1.1.0+16
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  transparent_image: ^2.0.0
-  cached_network_image: ^3.1.0
   flutter:
     sdk: flutter
-  shared_preferences:
-  firebase_database: ^7.1.2
-  google_maps_flutter: ^2.0.1
-  cupertino_icons: ^1.0.2
-  english_words: ^4.0.0-0
-  change_app_package_name: ^1.0.0
-  firebase_core: "^1.3.0"             # pour accès Firebase
-  firebase_auth: "^3.0.2"             # pour connexion avec module "Authentication" de Firebase
-  cloud_firestore: "^2.3.0"           # pour utilistion de la db Firestore de Firebase
-  provider: "^6.0.0"                  # partage de ressources au travers du contexte
-  datetime_picker_formfield: ^2.0.0   # plugin pour date et time picker
-  intl: ^0.17.0                       # plugin pour l'internationalisation
-  google_fonts: ^2.1.0                # utilisation des Google Fonts
-  font_awesome_flutter: ^9.1.0        # pour de jolis picto
-  mailto:                             # pour envoyer des emails
-  url_launcher:                       # pour ouvrir des liens
-  share_plus: ^2.1.4
-  introduction_screen: ^2.1.0         # pour afficher des images au démarage
+  cached_network_image: ^3.1.0        # cached image, better performance
+  shared_preferences:                 # allow access to localstorage (first launch info)
+  firebase_database: ^7.1.2           # firebase access
+  firebase_core: "^1.3.0"             # firebase access
+  firebase_auth: "^3.0.2"             # firebase Authentication
+  cloud_firestore: "^2.3.0"           # firebase Firestore
+  provider: "^6.0.0"                  # allow object sharing through Context
+  datetime_picker_formfield: ^2.0.0   # datetime picker plugin
+  intl: ^0.17.0                       # plugin about internationalization
+  google_fonts: ^2.1.0                # allow google Fonts usage
+  font_awesome_flutter: ^9.1.0        # nice pictograms
+  mailto:                             # allows sending email
+  url_launcher:                       # opens link
+  share_plus: ^2.1.4                  # share functionnality
+  introduction_screen: ^2.1.0         # display image at the beginning
 
 dev_dependencies:
   flutter_test:
